--- a/index.html
+++ b/index.html
@@ -68,27 +68,27 @@
         <div class="conteiner org-conteiner">
           <h2 class="heading-none visually-hidden">Організування</h2>
           <ul class="list-org">
-            <li class="org-list-item">
+            <li class="org-list-item icon-antenna">
               <h3 class="heading">Увага до деталей</h3>
               <p class="org-subtitle">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="org-list-item">
+            <li class="org-list-item icon-clock">
               <h3 class="heading">Пунктуальність</h3>
               <p class="org-subtitle">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="org-list-item">
+            <li class="org-list-item icon-diagram">
               <h3 class="heading">Планування</h3>
               <p class="org-subtitle">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="org-list-item">
+            <li class="org-list-item icon-astronaut">
               <h3 class="heading">Сучасні технології</h3>
               <p class="org-subtitle">
                 Значимість цих проблем настільки очевидна, що реалізація
