--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
         <ul class="list list-contact">
           <li class="contact-list-item">
             <a class="contact-link" href="mailto:info@devstudio.com">
-              <svg class="contact-icon" width="16" height="12">
-                <use href="./images/icons.svg#envelope-hover"></use>
+              <svg class="contact-icon" width="16" height="16">
+                <use href="./images/icon.svg#envelope-hover"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="contact-list-item">
             <a class="contact-link" href="tel:+380961111111">
-              <svg class="contact-icon" width="10" height="16">
-                <use href="./images/icons.svg#smartphone"></use>
+              <svg class="contact-icon" width="16" height="16">
+                <use href="./images/icon.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -73,22 +73,46 @@
       <section class="section-org">
         <div class="conteiner org-conteiner">
           <h2 class="heading-none visually-hidden">Організування</h2>
+          <div class="box-icon">
+            <ul class="org-icon">
+              <li class="org-item-icon">
+                <svg class="sprite-icon" width="70" height="70">
+                  <use href="./images/icon.svg#antenna"></use>
+                </svg>
+              </li>
+              <li class="org-item-icon">
+                <svg class="sprite-icon" width="70" height="70">
+                  <use href="./images/icon.svg#clock"></use>
+                </svg>
+              </li>
+              <li class="org-item-icon">
+                <svg class="sprite-icon" width="70" height="70">
+                  <use href="./images/icon.svg#diagram"></use>
+                </svg>
+              </li>
+              <li class="org-item-icon">
+                <svg class="sprite-icon" width="70" height="70">
+                  <use href="./images/icon.svg#astronaut"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
           <ul class="list-org">
-            <li class="org-list-item icon-antenna">
+            <li class="org-list-item">
               <h3 class="heading">Увага до деталей</h3>
               <p class="org-subtitle">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="org-list-item icon-clock">
+            <li class="org-list-item">
               <h3 class="heading">Пунктуальність</h3>
               <p class="org-subtitle">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="org-list-item icon-diagram">
+            <li class="org-list-item">
               <h3 class="heading">Планування</h3>
               <p class="org-subtitle">
                 Так само консультація з широким активом значною мірою зумовлює.
@@ -167,7 +191,7 @@
                     aria-label="Instagram"
                   >
                     <svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#instagram"></use>
+                      <use href="./images/icon.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -179,7 +203,7 @@
                     rel="noopener noreferrer"
                     aria-label="twitter"
                     ><svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#twitter"></use>
+                      <use href="./images/icon.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -192,7 +216,7 @@
                     aria-label="facebook"
                   >
                     <svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#facebook"></use>
+                      <use href="./images/icon.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -205,7 +229,7 @@
                     aria-label="linkedin"
                   >
                     <svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#linkedin"></use>
+                      <use href="./images/icon.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -233,7 +257,7 @@
                     aria-label="Instagram"
                   >
                     <svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#instagram"></use>
+                      <use href="./images/icon.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -245,7 +269,7 @@
                     rel="noopener noreferrer"
                     aria-label="twitter"
                     ><svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#twitter"></use>
+                      <use href="./images/icon.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -258,7 +282,7 @@
                     aria-label="facebook"
                   >
                     <svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#facebook"></use>
+                      <use href="./images/icon.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -271,7 +295,7 @@
                     aria-label="linkedin"
                   >
                     <svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#linkedin"></use>
+                      <use href="./images/icon.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -299,7 +323,7 @@
                     aria-label="Instagram"
                   >
                     <svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#instagram"></use>
+                      <use href="./images/icon.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -311,7 +335,7 @@
                     rel="noopener noreferrer"
                     aria-label="twitter"
                     ><svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#twitter"></use>
+                      <use href="./images/icon.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -324,7 +348,7 @@
                     aria-label="facebook"
                   >
                     <svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#facebook"></use>
+                      <use href="./images/icon.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -337,7 +361,7 @@
                     aria-label="linkedin"
                   >
                     <svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#linkedin"></use>
+                      <use href="./images/icon.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -365,7 +389,7 @@
                     aria-label="Instagram"
                   >
                     <svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#instagram"></use>
+                      <use href="./images/icon.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -377,7 +401,7 @@
                     rel="noopener noreferrer"
                     aria-label="twitter"
                     ><svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#twitter"></use>
+                      <use href="./images/icon.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
@@ -390,7 +414,7 @@
                     aria-label="facebook"
                   >
                     <svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#facebook"></use>
+                      <use href="./images/icon.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -403,7 +427,7 @@
                     aria-label="linkedin"
                   >
                     <svg class="socials-icon" width="20" height="20">
-                      <use href="./images/icons.svg#linkedin"></use>
+                      <use href="./images/icon.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -412,37 +436,145 @@
           </ul>
         </div>
       </section>
+      <!-- Постійні клієнти -->
+      <section class="client">
+        <div class="conteiner client-conteiner">
+          <h3 class="client-title">Постійні клієнти</h3>
+          <ul class="client-list">
+            <li class="client-item">
+              <a class="client-link" href="">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icon.svg#logo"></use>
+              </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icon.svg#logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icon.svg#logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icon.svg#logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icon.svg#logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a class="client-link" href="">
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icon.svg#logo5"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!--footer-->
     <footer class="footer">
       <div class="conteiner footer-conteiner">
-        <a class="logo-text" href="#"
-          ><span class="footer-logo-link">Web</span>Studio</a
-        >
-        <address class="address">
-          <ul class="list footer-list">
-            <li class="footer-list-item">
-              <a
-                class="address-link"
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Украінки, 26</a
-              >
-            </li>
-            <li class="footer-list-item">
-              <a class="footer-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-list-item">
-              <a class="footer-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <div>
+          <a class="logo-text" href="#"
+            ><span class="footer-logo-link">Web</span>Studio</a
+          >
+          <address class="address">
+            <ul class="list footer-list">
+              <li class="footer-list-item">
+                <a
+                  class="address-link"
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Украінки, 26</a
+                >
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      <div class="socials-conteiner">
+        <h3 class="footer-title">Приєднуйтесь</h3>
+        <ul class="footer-list-icon">
+          <li class="footer-item-icon">
+            <a
+              class="footer-link-icon"
+              href="https://instagram.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Instagram"
+            >
+              <svg class="footer-socials-icon" width="20" height="20">
+                <use href="./images/icon.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-item-icon">
+            <a
+              class="footer-link-icon"
+              href="https://twitter.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="twitter"
+              ><svg class="footer-socials-icon" width="20" height="20">
+                <use href="./images/icon.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-item-icon">
+            <a
+              class="footer-link-icon"
+              href="https://facebook.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="facebook"
+            >
+              <svg class="footer-socials-icon" width="20" height="20">
+                <use href="./images/icon.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-item-icon">
+            <a
+              class="footer-link-icon"
+              href="https://linkedin.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="linkedin"
+            >
+              <svg class="footer-socials-icon" width="20" height="20">
+                <use href="./images/icon.svg#linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
+    </div>
     </footer>
   </body>
 </html>
