--- a/portfolio.html
+++ b/portfolio.html
@@ -42,13 +42,19 @@
         </nav>
         <ul class="list list-contact">
           <li class="contact-list-item">
-            <a class="contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="contact-link" href="mailto:info@devstudio.com">
+              <svg class="contact-icon" width="16" height="16">
+                <use href="./images/icon.svg#envelope-hover"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="contact-list-item">
-            <a class="contact-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="contact-link" href="tel:+380961111111">
+              <svg class="contact-icon" width="16" height="16">
+                <use href="./images/icon.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -220,33 +226,91 @@
     <!--footer-->
     <footer class="footer">
       <div class="conteiner footer-conteiner">
-        <a class="logo-text" href="#"
-          ><span class="logo-link">Web</span>Studio</a
-        >
-        <address class="address">
-          <ul class="list footer-list">
-            <li class="footer-list-item">
-              <a
-                class="address-link"
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Украінки, 26</a
-              >
-            </li>
-            <li class="footer-list-item">
-              <a class="footer-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-list-item">
-              <a class="footer-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <div>
+          <a class="logo-text" href="#"
+            ><span class="footer-logo-link">Web</span>Studio</a
+          >
+          <address class="address">
+            <ul class="list footer-list">
+              <li class="footer-list-item">
+                <a
+                  class="address-link"
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Украінки, 26</a
+                >
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      <div class="socials-conteiner">
+        <h3 class="footer-title">Приєднуйтесь</h3>
+        <ul class="footer-list-icon">
+          <li class="footer-item-icon">
+            <a
+              class="footer-link-icon"
+              href="https://instagram.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Instagram"
+            >
+              <svg class="footer-socials-icon" width="20" height="20">
+                <use href="./images/icon.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-item-icon">
+            <a
+              class="footer-link-icon"
+              href="https://twitter.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="twitter"
+              ><svg class="footer-socials-icon" width="20" height="20">
+                <use href="./images/icon.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-item-icon">
+            <a
+              class="footer-link-icon"
+              href="https://facebook.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="facebook"
+            >
+              <svg class="footer-socials-icon" width="20" height="20">
+                <use href="./images/icon.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-item-icon">
+            <a
+              class="footer-link-icon"
+              href="https://linkedin.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="linkedin"
+            >
+              <svg class="footer-socials-icon" width="20" height="20">
+                <use href="./images/icon.svg#linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
+    </div>
     </footer>
   </body>
 </html>
